styles/main.css
*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  overflow: hidden;
}

body {
  background: url(../images/general/background-1.png);
  background-size: contain;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-self: center;
}

.container {
  height: 100%;
  width: 100%;
  max-height: 938px;
  /* bylo  max-height: 970px; */
  max-width: 1400px;
  min-width: 1300px;
  min-height: 701px;
  margin: auto auto;
  position: relative;
  overflow: hidden;
}

.tv-set {
  width: 100%;
  height: 100%;
  background: url(../images/general/tv-set-about-me.png) no-repeat;
  background-size: 97% 102%;
  background-position: 59% 18%;
  position: relative;
}

.scene-container {
  width: 100%;/* k 1400px */
  height: 82%;
  max-height: 830px;
  max-width: 941px;
  min-width: 320px;
  position: relative;
  top: 6%;
  left: 6%;
  overflow: hidden;
}

.tv-stand {
  height: 100%;
  width: 2700px;
  background: url(../images/general/shelf.png) no-repeat;
  background-size: contain;
  bottom: 2%;
  left: -40%;
  display: none;
  position: relative;
}

.clock {
  width: 400px;
  height: 400px;
  position: absolute;
  top: -36%;
  left: 5%;
  object-fit: contain;
}

.radio {
  width: 600px;
  height: 600px;
  position: absolute;
  top: -47%;
  left: 73%;
  object-fit: contain;
}

.btn-scene {
  padding: 0.5em 1em;
  background-color: rgb(144, 131, 113);
  color: #fff;
  border: none;
  text-transform: uppercase;
  font-weight: bold;
  cursor: pointer;
}

#white-noise {
  position: absolute;
  z-index: -1;
  width: 100%;
  height: 84%;
  max-height: 793px;
  max-width: 879px;
  background: url(../images/general/\ white-noise.gif);
  background-size: contain;
  top: 6%;
  left: 7%;
  display: none;
}

.menu-style {
  width: 10%;
  height: 37px;
  margin-bottom: 20px;
  background-size: 100% auto;
  cursor: pointer;
  position: absolute;
  right: 15%;
}

#about-me-btn {
  top: 19%;
}

#projects-btn {
  top: 24.5%;
}

#resume-btn {
  top: 30%;
}

.layer {
  width: 100%;
  position: absolute;
}

.skater {
  width: 27%;
  height: 27%;
  position: absolute;
  bottom: 3%;
  left: 50%;
  display: block;
  margin: 0 auto;
  transform: translate(-50%, 0%);
  object-fit: contain;
}

.skater.flip-image {
  transform: translate(-50%, 0%) rotateY(180deg);
}

.road-elements {
  height: 30%;
  bottom: 2%;
}

.road-cones {
  position: absolute;
  height: 36%;
  bottom: 12%;
  left: 28%;
}

.road-closed {
  position: absolute;
  height: 68%;
  bottom: 22%;
  left: 337%;
}

/*------------ Burger Menu Styles----------- */
header {
  width: 100vw;
  overflow: hidden;
}

.made-with-love {
  position: fixed;
  background-color: rgba(1, 1, 1, 0.5);
  width: 100%;
  height: 50px;
  left: 0;
  z-index: 999;
  font-family: "Merienda", cursive;
  font-size: 1rem;
  color: orange;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  display: none;
  padding-top: 0.5rem;
}

.heart {
  color: red;
  padding: 0 0.2rem;
}

.burger-menu {
  display: none;
  width: 100%;
  position: fixed;
  top: 10px;
  right: 0;
  z-index: 999;
}

.burger {
  display: none;
  position: absolute;
  top: 0;
  right: 2rem;
  font-size: 24px;
  cursor: pointer;
  color: orange;
}

.menu {
  display: none;
  position: absolute;
  top: 2.4rem;
  right: 0;
  background-color: rgba(1, 1, 1, 0.5);
  padding: 10px;
  width: 150px;
}

.menu.open {
  display: block;
}

.menu ul {
  list-style-type: none;
}

.menu li {
  width: 100%;
  margin-bottom: 10px;
  display: inline-flex;
  align-items: center;
}

.menu a {
  text-decoration: none;
  color: #fff;
  font-family: "Merienda", cursive;
  font-size: 1rem;
}

.menu li:hover {
  text-decoration: underline;
  text-decoration-thickness: 1.5px;
  text-underline-offset: 0.5rem;
  text-decoration-color: #fff;
}

.menu img {
  position: relative;
  top: 10px;
  width: 30px;
  margin-right: 1rem;
  background-color: orange;
  padding: 5px;
  border-radius: 50%;
}

